fix: Fixed courses hover and navbar z-index

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   gap: 10px;
   top: 0;
   position: sticky;
+  z-index: 9999;
 }
 
 .navbar img {
